--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.0.15
   provider:
-  shared_preferences:
+  shared_preferences: ^2.1.1
+  sqflite: ^2.2.8+4
+  path: any
 
 dev_dependencies:
   flutter_test:
